amebad.mk finished but a lot of errors

--- a/ports/ameba/Makefile
+++ b/ports/ameba/Makefile
@@ -1,5 +1,7 @@
 include ../../py/mkenv.mk
 
+
+
 # declare before py.mk
 FROZEN_DIR = scripts
 FROZEN_MPY_DIR = modules
@@ -7,26 +9,45 @@ FROZEN_MPY_DIR = modules
 include $(TOP)/py/py.mk
 
 OS := $(shell uname)
-VENDOR := vendor
 TOOL := tool
-CHIP := AMEBA1
+CHIP := AMEBAD
 DEBUG := 1
-# CHIP would be AMEBA1, AMEBAZ
+TC_VERSION := $(CHIP)
+ifeq ($(CHIP), AMEBAD)
+VENDOR := vendor/ambd_sdk
+else
+VENDOR := vendor
+endif
+
+$(info Now building for $(CHIP))
+# toolchains version, note ameba1 uses V4.8.3, amebaD used ASDK V6.5.0, if unspecified,it uses V9.2.1
+# CHIP would be AMEBA1, AMEBAD, AMEBAZ
 
 # toolchains
+ifeq ($(TC_VERSION), AMEBA1)  
+TC_PATH := ../../../../toolchain/gcc-arm-none-eabi-4.8.3-2014q1/bin/
+else ifeq ($(TC_VERSION), AMEBAD)
+TC_PATH := ../../../../toolchain/asdk-6.5.0/bin/
+else
+TC_PATH :=
+endif
 CROSS_COMPILE := arm-none-eabi-
-AR = $(CROSS_COMPILE)ar
-CC = $(CROSS_COMPILE)gcc
-AS = $(CROSS_COMPILE)as
-NM = $(CROSS_COMPILE)nm
-LD = $(CROSS_COMPILE)gcc
-GDB = $(CROSS_COMPILE)gdb
-SIZE = $(CROSS_COMPILE)size
-OBJCOPY = $(CROSS_COMPILE)objcopy
-OBJDUMP = $(CROSS_COMPILE)objdump
+AR = $(TC_PATH)$(CROSS_COMPILE)ar
+CC = $(TC_PATH)$(CROSS_COMPILE)gcc
+AS = $(TC_PATH)$(CROSS_COMPILE)as
+NM = $(TC_PATH)$(CROSS_COMPILE)nm
+LD = $(TC_PATH)$(CROSS_COMPILE)gcc
+GDB = $(TC_PATH)$(CROSS_COMPILE)gdb
+SIZE = $(TC_PATH)$(CROSS_COMPILE)size
+OBJCOPY = $(TC_PATH)$(CROSS_COMPILE)objcopy
+OBJDUMP = $(TC_PATH)$(CROSS_COMPILE)objdump
+STRIP = $(TC_PATH)$(CROSS_COMPILE)strip
+
 
 ifeq ($(CHIP), AMEBA1)
 include ameba1.mk
+else ifeq ($(CHIP), AMEBAD)
+include amebad.mk
 else
 include amebaz.mk
 endif
