--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Per default everything gets normalized and gets LF line endings on checkout.
-* text eol=crlf
+#* text eol=crlf
 
 # These will always have CRLF line endings on checkout.
 *.vcxproj text eol=crlf
@@ -12,6 +12,8 @@
 *.jpg binary
 *.dxf binary
 *.mpy binary
+*.bz2 binary
+*.tar binary
 
 # These should also not be modified by git.
 tests/basics/string_cr_conversion.py -text
